salesforce/main/default/objects/Interaction_Signal__c/fields/Interaction_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Intelligence__c</fullName>
    <label>Interaction Intelligence</label>
    <type>MasterDetail</type>
    <referenceTo>Interaction_Intelligence__c</referenceTo>
    <relationshipLabel>Interaction Signals</relationshipLabel>
    <relationshipName>Interaction_Signals</relationshipName>
    <description>이 Signal이 추출된 원본 Interaction Intelligence 레코드. Opportunity는 이 관계를 통해서만 조회합니다(Interaction_Signal__c에 직접 저장하지 않음).</description>
</CustomField>