salesforce/main/default/objects/Interaction_Signal__c/fields/Signal_Category__c.field-meta.xml
<CustomField>
    <fullName>Signal_Category__c</fullName>
    <label>Signal Category</label>
    <type>Picklist</type>
    <required>true</required>
    <description>이 신호가 속하는 상위 분류. Opportunity Score 등에서 집계(GROUP BY) 기준으로 사용하기 위해 제한된 값 목록으로 관리합니다.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INTEREST</fullName><default>false</default><label>Interest</label></value>
            <value><fullName>BUDGET</fullName><default>false</default><label>Budget</label></value>
            <value><fullName>DECISION</fullName><default>false</default><label>Decision</label></value>
            <value><fullName>FIT</fullName><default>false</default><label>Fit</label></value>
            <value><fullName>COMPETITION</fullName><default>false</default><label>Competition</label></value>
            <value><fullName>TIMING</fullName><default>false</default><label>Timing</label></value>
            <value><fullName>MOMENTUM</fullName><default>false</default><label>Momentum</label></value>
            <value><fullName>RISK</fullName><default>false</default><label>Risk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>